Fix for menu scrollbar visible for mobile width

--- a/MDMProject/Content/style.css
+++ b/MDMProject/Content/style.css
@@ -289,3 +289,7 @@ main {
 .rodo li {
     margin-bottom: 0.5rem;
 }
+
+#partialView > .navbar-nav {
+    margin: 0;
+}
